==> rdrill/cc1101-mbed/cc1100.cpp <==
#include "mbed.h"
#include "CC1101.h"

void CC1100::reset(void)                  // reset defined in cc1100 datasheet
{
    csn = 0;
    wait_us(10);
    csn = 1;
    wait_us(40);

    spi_write_strobe(SRES);
    wait_ms(1);
}

void CC1100::wakeup(void)
{
    csn = 0;
    wait_us(10);
    csn = 1;
    wait_us(10);
    receive();                            // go to RX Mode
}

uint8_t CC1100::begin()
{
    uint8_t partnum, version;
                //setup AVR GPIO ports
    csn = 1;
    _spi.format(8,0);
    _spi.frequency(500000);

    set_debug_level(set_debug_level());   //set debug level of CC1101 outputs

    if(debug_level > 0){
      //  Serial.println("Init CC1100...");
    }

    //spi_begin();                          //inits SPI Interface
    reset();                              //CC1100 init reset

    spi_write_strobe(SFTX);wait_us(100);//flush the TX_fifo content
    spi_write_strobe(SFRX);wait_us(100);//flush the RX_fifo content

    partnum = spi_read_register(PARTNUM); //reads CC1100 partnumber
    version = spi_read_register(VERSION); //reads CC1100 version number

    //checks if valid Chip ID is found. Usualy 0x03 or 0x14. if not -> abort
    if(version == 0x00 || version == 0xFF){
            if(debug_level > 0){
                dbs.printf("no CC11xx found \r\n");
                dbs.printf("\r\n");
            }
            end();                        //CC1100 Powerdown and disable SPI bus

            return FALSE;
        }

    if(debug_level > 0){
        dbs.printf("Partnum: 0x%02X \r\n", partnum);
        dbs.printf("Version: 0x%02X \r\n", version);
    }


    //if no valid settings are available, CC100 Powerdown and SPI disable


    //set modulation mode
    set_mode(MY_MODE);

    //set ISM band
    set_ISM(MY_FREQ);

    //set channel
    set_channel(MY_CHAN);

    //set output power amplifier
    set_output_power_level(0);            //set PA to 0dBm as default

    //set my receiver address
    set_myaddr(MY_ADDR);                  //My_Addr

    if(debug_level > 0){
        dbs.printf(("...done"));
    }

    receive();                            //set CC1100 in receive mode

    return TRUE;
}

uint8_t CC1100::sidle(void)
{
    uint8_t marcstate;

    spi_write_strobe(SIDLE);              //sets to idle first. must be in

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x01)              //0x01 = sidle
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of cc1100 to be sure in RX
        //uart_puthex_byte(marcstate);
    }
    //dbs.printf("\r\n")
    wait_us(100);
    return TRUE;
}

uint8_t CC1100::transmit(void)
{
    uint8_t marcstate;

    sidle();                              //sets to idle first.
    spi_write_strobe(STX);                //sends the data over air

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x01)              //0x01 = ILDE after sending data
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of cc1100 to be sure in IDLE and TX is finished
        //uart_puthex_byte(marcstate);
    }
    //dbs.printf("\r\n")
    wait_us(100);
    return TRUE;
}

uint8_t CC1100::receive(void)
{
    uint8_t marcstate;

    sidle();                              //sets to idle first.
    spi_write_strobe(SRX);                //writes receive strobe (receive mode)

    marcstate = 0xFF;                     //set unknown/dummy state value

    while(marcstate != 0x0D)              //0x0D = RX
    {
        marcstate = (spi_read_register(MARCSTATE) & 0x1F); //read out state of cc1100 to be sure in RX
        //uart_puthex_byte(marcstate);
    }
    //dbs.printf("\r\n")
    wait_us(100);
    return TRUE;
}

void CC1100::wor_enable()
{
/*
    EVENT1 = WORCTRL[6:4] -> Datasheet page 88
    EVENT0 = (750/Xtal)*(WOREVT1<<8+WOREVT0)*2^(5*WOR_RES) = (750/26Meg)*65407*2^(5*0) = 1.89s
                        (WOR_RES=0;RX_TIME=0)               -> Datasheet page 80
i.E RX_TIMEOUT = EVENT0*       (3.6038)      *26/26Meg = 235.8ms
                        (WOR_RES=0;RX_TIME=1)               -> Datasheet page 80
i.E.RX_TIMEOUT = EVENT0*       (1.8029)      *26/26Meg = 117.9ms
*/
    sidle();

    spi_write_register(MCSM0, 0x18);    //FS Autocalibration
    spi_write_register(MCSM2, 0x01);    //MCSM2.RX_TIME = 1b

    // configure EVENT0 time
    spi_write_register(WOREVT1, 0xFF);  //High byte Event0 timeout
    spi_write_register(WOREVT0, 0x7F);  //Low byte Event0 timeout

    // configure EVENT1 time
    spi_write_register(WORCTRL, 0x78);  //WOR_RES=0b; tEVENT1=0111b=48d -> 48*(750/26MHz)= 1.385ms

    spi_write_strobe(SFRX);             //flush RX buffer
    spi_write_strobe(SWORRST);          //resets the WOR timer to the programmed Event 1
    spi_write_strobe(SWOR);             //put the radio in WOR mode when CSn is released

    wait_us(100);
}

void CC1100::wor_reset()
{
    sidle();                            //go to IDLE
    spi_write_register(MCSM2, 0x01);    //MCSM2.RX_TIME = 1b
    spi_write_strobe(SFRX);             //flush RX buffer
    spi_write_strobe(SWORRST);          //resets the WOR timer to the programmed Event 1
    spi_write_strobe(SWOR);             //put the radio in WOR mode when CSn is released

    wait_us(100);
}

uint8_t CC1100::rx_payload_burst(uint8_t rxbuffer[], uint8_t &pktlen)
{
    uint8_t bytes_in_RXFIFO = 0;
    uint8_t res = 0;

    bytes_in_RXFIFO = spi_read_register(RXBYTES);              //reads the number of bytes in RXFIFO

    if((bytes_in_RXFIFO & 0x7F) && !(bytes_in_RXFIFO & 0x80))  //if bytes in buffer and no RX Overflow
    {
        spi_read_burst(RXFIFO_BURST, rxbuffer, bytes_in_RXFIFO);
        pktlen = rxbuffer[0];
        res = TRUE;
    }
    else
    {
        if(debug_level > 0){
            dbs.printf("no bytes in RX buffer or RX Overflow!: %d \r\n", bytes_in_RXFIFO);
        }
        sidle();                                                  //set to IDLE
        spi_write_strobe(SFRX);wait_us(100);            //flush RX Buffer
        receive();                                                //set to receive mode
        res = FALSE;
    }

    return res;
}

uint8_t CC1100::sent_packet(uint8_t my_addr, uint8_t rx_addr, uint8_t *txbuffer,
                            uint8_t pktlen,  uint8_t tx_retries)
                            {
                                uint8_t pktlen_ack, rssi, lqi;                              //default package len for ACK
                                uint8_t rxbuffer[FIFOBUFFER];
                                uint8_t tx_retries_count = 0;
                                uint8_t from_sender;
                                uint16_t ackWaitCounter = 0;

                                if(pktlen > (FIFOBUFFER - 1))
                                {
                                    dbs.printf("ERROR: package size overflow\r\n");
                                    return FALSE;
                                }

                                do                                                          //sent package out with retries
                                {
                                    tx_payload_burst(my_addr, rx_addr, txbuffer, pktlen);   //loads the data in cc1100 buffer
                                    transmit();                                             //sents data over air
                                    receive();                                              //receive mode

                                    if(rx_addr == BROADCAST_ADDRESS){                       //no wait acknowledge if sent to broadcast address or tx_retries = 0
                                        return TRUE;                                        //successful sent to BROADCAST_ADDRESS
                                    }

                                    while (ackWaitCounter < ACK_TIMEOUT )                   //wait for an acknowledge
                                    {
                                        if (packet_available() == TRUE)                     //if RF package received check package acknowge
                                        {
                                            from_sender = rx_addr;                          //the original message sender address
                                            rx_fifo_erase(rxbuffer);                        //erase RX software buffer
                                            rx_payload_burst(rxbuffer, pktlen_ack);         //reads package in buffer
                                            check_acknolage(rxbuffer, pktlen_ack, from_sender, my_addr); //check if received message is an acknowledge from client
                                            return TRUE;                                    //package successfully sent
                                        }
                                        else{
                                            ackWaitCounter++;                               //increment ACK wait counter
                                            wait_ms(1);                                       //delay to give receiver time
                                        }
                                    }

                                    ackWaitCounter = 0;                                     //resets the ACK_Timeout
                                    tx_retries_count++;                                     //increase tx retry counter

                                    if(debug_level > 0){                                    //debug output messages
                                        dbs.printf(" #:");
                                        dbs.printf("0x%02X \r\n", tx_retries_count);
                                    }
                                }while(tx_retries_count <= tx_retries);                     //while count of retries is reaches

                                return FALSE;                                               //sent failed. too many retries
                            }
